--- a/functions/package.json
+++ b/functions/package.json
@@ -15,14 +15,16 @@
   "dependencies": {
     "child-process-promise": "^2.2.1",
     "cors": "^2.8.5",
+    "data-uri-to-buffer": "^3.0.1",
     "express": "^4.17.1",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^9.11.0",
     "firebase-functions": "^3.14.1",
     "fs": "0.0.1-security",
     "mime-types": "^2.1.32",
     "mmmagic": "^0.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.23",
     "os": "^0.1.2",
     "path": "^0.12.7"
   },
