--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "child-process-promise": "^2.2.1",
     "cors": "^2.8.5",
     "data-uri-to-buffer": "^3.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.0",
     "firebase-functions": "^3.14.1",
